Fixing form alignment

--- a/blueprint/screen.css
+++ b/blueprint/screen.css
@@ -87,7 +87,6 @@ input[type=text], input[type=password], input.text, input.title, textarea, selec
 input.text, input.title {width:300px;padding:5px;}
 input.title {font-size:1.5em;}
 textarea {width:390px;height:250px;padding:5px;}
-input[type=checkbox], input[type=radio], input.checkbox, input.radio {position:relative;top:.25em;}
 form.inline {line-height:3;}
 form.inline p {margin-bottom:0;}
 .error, .notice, .success, .info {padding:0.8em;margin-bottom:1em;border:2px solid #ddd;}
