--- a/blueprint/src/forms.css
+++ b/blueprint/src/forms.css
@@ -18,6 +18,12 @@ legend      { font-weight: bold; font-size:1.2em; }
 /* Form fields
 -------------------------------------------------------------- */
 
+/* 
+  Attribute selectors are used to differentiate the different types 
+  of input elements, but to support old browsers, you will have to 
+  add classes for each one. ".title" simply creates a large text  
+  field, this is purely for looks.
+ */
 input[type=text], input[type=password],
 input.text, input.title,
 textarea, select {
@@ -41,16 +47,15 @@ input.title   { width: 300px; padding:5px; }
 input.title   { font-size:1.5em; }
 textarea      { width: 390px; height: 250px; padding:5px; }
 
-input[type=checkbox], input[type=radio],
-input.checkbox, input.radio {
-  position:relative; top:.25em;
-}
-
+/* 
+  This is to be used on forms where a variety of elements are 
+  placed side-by-side. Use the p tag to denote a line. 
+ */
 form.inline { line-height:3; }
 form.inline p { margin-bottom:0; }
 
 
-/* Success, notice and error boxes
+/* Success, info, notice and error boxes
 -------------------------------------------------------------- */
 
 .error,
